добавлена core.api.schema. Внесены изменения в описание api
